# portfolio

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  db_stack.yaml  entrypoint.sh  makefile  pyproject.toml  yoyo.ini
backend/: __main__.py  app.py  conftest.py  log_config.py  queue.py  response_models.py  settings.py  validator.py
backend/api/: router.py
backend/api/app/: __init__.py  views.py
backend/api/compilers/: __init__.py  compilers.py  job.py
backend/api/monitoring/: __init__.py  views.py
backend/api/posts/: __init__.py  posts.py
backend/api/users/: __init__.py  users.py
backend/db/: dal.py  db_entities.py
backend/services/: auth.py
backend/tests/: test_personalsite.py
backend/web/: application.py  lifetime.py
backend/web/api/: router.py
client/: index.html  package.json  prettierrc.json  vite.config.ts
client/public/: index.html
client/src/: App.css  App.tsx  constants.ts  index.css  main.tsx  types.ts  util.ts  utils.ts
client/src/api/: blog-api.ts  index.ts  user-api.ts  utils.ts
deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
deploy/terraform/: bastion.tf  database.tf  dns.tf  docker-compose.yml  ecs.tf  init.sh  load_balancer.tf  main.tf  network.tf  outputs.tf  sample.tfvars  terraform.tfvars  variables.tf
migrations/: 20230420_01_wLqTO.sql
personalsite/: __init__.py  __main__.py  conftest.py  settings.py
personalsite/services/: __init__.py
personalsite/tests/: __init__.py
personalsite/web/: __init__.py  application.py  lifetime.py
(+30 files in other folders)
